Lighting control request handler now exists, some tidying and warning removal

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="col-md-6">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen class="embed-responsive-item"
-                frameborder="0" src="https://www.youtube-nocookie.com/embed/vPGUZvtQfA0"></iframe>
+                src="https://www.youtube-nocookie.com/embed/vPGUZvtQfA0"></iframe>
       </div>
     </div>
     <div class="col-md-6">
