Intensity fader and command handling

--- a/index.html
+++ b/index.html
@@ -84,19 +84,27 @@
 
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-4">
+    <div class="col-10">
+      <h3>Intensity</h3>
+      <div id="intensity">
+        <p>Choose a group of lights above to see available controls...</p>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-md-4 col-10">
       <h3>Colour</h3>
       <div class="colours btn-group-toggle" data-toggle="buttons" id="colour">
         <p>Choose a group of lights above to see available controls...</p>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-10">
       <h3>Position</h3>
       <div class="stacked-buttons btn-group-toggle" data-toggle="buttons" id="position">
         <p>Choose a group of lights above to see available controls...</p>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-10">
       <h3>Effect</h3>
       <div class="stacked-buttons btn-group-toggle" data-toggle="buttons" id="effect">
         <p>Choose a group of lights above to see available controls...</p>
