--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js'></script>
 <script src="resources/fixtures.js"></script>
-<script src="resources/script.js"></script>
+<script src="resources/controls.js"></script>
 
 </body>
 </html>
