--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           can start making your designs. The bar at the bottom of the screen will let you know what mode you're in.</p>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" data-dismiss="modal" type="button">Join the queue</button>
+        <button class="btn btn-primary" data-dismiss="modal" id="joinQueue" type="button">Join the queue</button>
       </div>
     </div>
   </div>
@@ -42,10 +42,8 @@
 
 <!-- Status bar -->
 <div class="status">
-  <div class="container status-content">
-    <strong>Rehearsal mode</strong> - your controls aren't active so your designs won't appear live, but you can
-    practise.<br>
-    <!--<strong class="live">Live mode</strong> - your controls are currently affecting what you see on the live stream!-->
+  <div class="container status-content" id="status">
+    Waiting for queue information...
   </div>
 </div>
 
