--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- Intro modal -->
 <div aria-hidden="true" class="modal fade" data-backdrop="static" data-keyboard="false" id="intro-modal" tabindex="-1">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <div class="logo mr-3">
@@ -29,9 +29,9 @@
       <div class="modal-body">
         <p>Crowd Control lets you take control of a 3D rendering of St Andrews' only nightclub, Club 601. We're live on
           Facebook and Teams right now, where your designs will be broadcast to the world.</p>
-        <p>Join the queue and have a play with the controls in Rehearsal Mode while you're waiting, to get a feel for
-          how it works. Once it's your turn, you'll be switched into Live Mode and your controls will activate, so you
-          can start making your designs. The bar at the bottom of the screen will let you know what mode you're in.</p>
+        <p>Practice using the controls in Rehearsal Mode while you wait for your turn. Once it's your turn, your
+          controls will go live and you'll be able to see your designs come to life on the live stream!</p>
+        <p>The bar at the bottom of the screen will let you know what mode you're in.</p>
       </div>
       <div class="modal-footer">
         <button class="btn btn-primary join-queue" data-dismiss="modal" type="button">Join the queue</button>
@@ -42,7 +42,7 @@
 
 <!-- Live mode intro -->
 <div aria-hidden="true" class="modal fade" id="live-modal" tabindex="-1">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title"><span class="live">Live mode</span> activated.</h3>
@@ -59,7 +59,7 @@
 
 <!-- Time up -->
 <div aria-hidden="true" class="modal fade" data-backdrop="static" data-keyboard="false" id="end-modal" tabindex="-1">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <div class="logo mr-3">
