--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="embed-responsive embed-responsive-16by9">
         <!-- Embedded venue live stream -->
         <iframe allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen class="embed-responsive-item"
-                src="https://www.youtube-nocookie.com/embed/vPGUZvtQfA0"></iframe>
+                src="https://www.youtube-nocookie.com/embed/vPGUZvtQfA0?modestbranding=1&rel=0&playsinline=1"></iframe>
       </div>
     </div>
     <div class="col-md-6">
