--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="logo mr-3">
-          <div class="logo-ents">Ents</div>
-          <div class="logo-crew">Crew</div>
+        <div class="row">
+          <div class="col-md-4 col-5">
+            <img alt="Ents Crew" class="w-100" src="assets/logo.png"/>
+          </div>
+          <div class="col-md-7">
+            <h3 class="modal-title">Welcome to Crowd Control.</h3>
+          </div>
         </div>
-        <h3 class="modal-title">Welcome to Crowd Control.</h3>
       </div>
       <div class="modal-body">
         <p>Crowd Control lets you take control of a 3D rendering of St Andrews' only nightclub, Club 601. We're live on
@@ -62,11 +65,14 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="logo mr-3">
-          <div class="logo-ents">Ents</div>
-          <div class="logo-crew">Crew</div>
+        <div class="row">
+          <div class="col-md-4 col-5">
+            <img alt="Ents Crew" class="w-100" src="assets/logo.png"/>
+          </div>
+          <div class="col-md-7">
+            <h3 class="modal-title">Time up!</h3>
+          </div>
         </div>
-        <h3 class="modal-title">Time's up!</h3>
       </div>
       <div class="modal-body">
         <p>Someone else has taken over the controls now. We hope you had fun!</p>
@@ -92,13 +98,14 @@
 <!-- Header -->
 <div class="container">
   <header>
-    <div class="logo mr-3">
-      <div class="logo-ents">Ents</div>
-      <div class="logo-crew">Crew</div>
-    </div>
-    <div class="title">
-      <h1>Crowd Control</h1>
-      <p>Be the lighting designer in our 3D rendering of Club 601.</p>
+    <div class="row title align-items-center">
+      <div class="col-md-2 col-5 pb-2">
+        <img alt="Ents Crew" class="w-100" src="assets/logo.png"/>
+      </div>
+      <div class="col-md-10">
+        <h1>Crowd Control</h1>
+        <p>Be the lighting designer in our 3D rendering of Club 601.</p>
+      </div>
     </div>
   </header>
   <p>Choose a group of lights, then pick their colour, position, and effects. Watch the live stream to see your design
