Minor copy change

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Someone else has taken over the controls now. We hope you had fun!</p>
         <p>Fancy doing this more?</p>
         <p>Ents Crew power events in the Union. Join us and we'll give you all the training you need for lighting,
-          sound, or projections - and there's no joining fee!</p>
+          sound, or projections - and there's no membership fee!</p>
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary join-queue" data-dismiss="modal" type="button">Re-join the queue</button>
