Minor copy change

--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
       </div>
     </div>
   </header>
-  <p>Choose a group of lights, then pick their colour, position, and effects. Watch the live stream to see your design
-    come to life.
-  <p>
+  <p>Choose a group of lights, then pick their colour, position, and effects.</p>
   <hr>
 </div>
 
