--- a/index.html
+++ b/index.html
@@ -113,18 +113,11 @@
 </div>
 
 <!-- Live views section -->
-<div class="container-fluid mt-4 live-views">
-  <div class="row">
-    <div class="col-md-6">
-      <div class="embed-responsive embed-responsive-16by9">
-        <!-- Embedded venue live stream -->
-        <iframe allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen class="embed-responsive-item"
-                src="https://www.youtube-nocookie.com/embed/vPGUZvtQfA0?modestbranding=1&rel=0&playsinline=1"></iframe>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <!-- Interactive venue map to choose fixtures -->
-    </div>
+<div class="container\ mt-4 live-views">
+  <div class="embed-responsive embed-responsive-16by9">
+    <!-- Embedded venue live stream -->
+    <iframe allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen class="embed-responsive-item"
+            src="https://www.youtube-nocookie.com/embed/vPGUZvtQfA0?modestbranding=1&rel=0&playsinline=1"></iframe>
   </div>
 </div>
 
