Add DJ training to list of things we do

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 </head>
 <body>
-
 <!-- Intro modal -->
 <div aria-hidden="true" class="modal fade" data-backdrop="static" data-keyboard="false" id="intro-modal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
@@ -78,6 +77,7 @@
         <p>Someone else has taken over the controls now. We hope you had fun!</p>
         <p>Fancy doing this more?</p>
         <p>Ents Crew power events in the Union. Join us and we'll give you all the training you need for lighting,
+          DJing,
           sound, or projections - and there's no membership fee!</p>
       </div>
       <div class="modal-footer">
