Minor copy change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="modal-body">
         <p>Crowd Control lets you take control of a 3D rendering of St Andrews' only nightclub, Club 601. We're live on
-          Facebook and Teams right now, where your designs will be broadcast to the world.</p>
+          Facebook right now, where your designs will be broadcast to the world.</p>
         <p>Practice using the controls in Rehearsal Mode while you wait for your turn. Once it's your turn, your
           controls will go live and you'll be able to see your designs come to life on the live stream!</p>
         <p>The bar at the bottom of the screen will let you know what mode you're in.</p>
@@ -80,8 +80,7 @@
         <p>Someone else has taken over the controls now. We hope you had fun!</p>
         <p>Fancy doing this more?</p>
         <p>Ents Crew power events in the Union. Join us and we'll give you all the training you need for lighting,
-          DJing,
-          sound, or projections - and there's no membership fee!</p>
+          DJing, sound, or projections - and there's no membership fee!</p>
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary join-queue" data-dismiss="modal" type="button">Re-join the queue</button>
