--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
     <iframe allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen class="embed-responsive-item"
             src="https://www.youtube-nocookie.com/embed/vPGUZvtQfA0?modestbranding=1&rel=0&playsinline=1"></iframe>
   </div>
+  <small>Video hosted by YouTube and accessible under the <a href="https://policies.google.com/privacy" target="_blank">Google
+    Privacy Policy</a>.</small>
 </div>
 
 <!-- Light groups carousel - populated by Javascript -->
