--- a/index.html
+++ b/index.html
@@ -17,6 +17,34 @@
 
 </head>
 <body>
+<!-- Off air modal -->
+<div aria-hidden="true" class="modal fade" data-backdrop="static" data-keyboard="false" id="off-air-modal"
+     tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="row">
+          <div class="col-md-4 col-5">
+            <img alt="Ents Crew" class="w-100" src="assets/logo.png"/>
+          </div>
+          <div class="col-md-7">
+            <h3 class="modal-title">Crowd Control is offline.</h3>
+          </div>
+        </div>
+      </div>
+      <div class="modal-body">
+        <p>Check our <a href="https://www.facebook.com/entscrew">Facebook page</a> to find out when we're live. If you
+          think we should be live now, refresh the page.</p>
+        <p>Ents Crew power events in the Union. Join us and we'll give you all the training you need for lighting,
+          DJing, sound, or projections - and there's no membership fee!</p>
+      </div>
+      <div class="modal-footer">
+        <a class="btn btn-primary" href="https://entscrew.net">Join Ents Crew</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Intro modal -->
 <div aria-hidden="true" class="modal fade" data-backdrop="static" data-keyboard="false" id="intro-modal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
