--- a/index.html
+++ b/index.html
@@ -155,11 +155,13 @@
 
 <!-- Light groups carousel - populated by Javascript -->
 <div class="container">
-  <h2 class="fixtures-title">Light groups</h2>
-  <div data-simplebar data-simplebar-auto-hide="false">
-    <div class="fixtures-carousel btn-group-toggle" data-toggle="buttons" id="fixtures-carousel">
+  <fieldset>
+    <legend><h2 class="fixtures-title">Light groups</h2></legend>
+    <div data-simplebar data-simplebar-auto-hide="false">
+      <div class="fixtures-carousel btn-group-toggle" data-toggle="buttons" id="fixtures-carousel">
+      </div>
     </div>
-  </div>
+  </fieldset>
 </div>
 
 <!-- Fixture controls - populated by Javascript once a fixture is chosen from the carousel -->
@@ -174,22 +176,28 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-md-4 col-10">
-      <h3>Colour</h3>
-      <div class="colours btn-group-toggle" data-toggle="buttons" id="colour">
-        <p>Choose a group of lights above to see available controls...</p>
-      </div>
+      <fieldset>
+        <legend><h3>Colour</h3></legend>
+        <div class="colours btn-group-toggle" data-toggle="buttons" id="colour">
+          <p>Choose a group of lights above to see available controls...</p>
+        </div>
+      </fieldset>
     </div>
     <div class="col-md-3 col-10">
-      <h3>Position</h3>
-      <div class="stacked-buttons btn-group-toggle" data-toggle="buttons" id="position">
-        <p>Choose a group of lights above to see available controls...</p>
-      </div>
+      <fieldset>
+        <legend><h3>Position</h3></legend>
+        <div class="stacked-buttons btn-group-toggle" data-toggle="buttons" id="position">
+          <p>Choose a group of lights above to see available controls...</p>
+        </div>
+      </fieldset>
     </div>
     <div class="col-md-3 col-10">
-      <h3>Effect</h3>
-      <div class="stacked-buttons btn-group-toggle" data-toggle="buttons" id="effect">
-        <p>Choose a group of lights above to see available controls...</p>
-      </div>
+      <fieldset>
+        <legend><h3>Effect</h3></legend>
+        <div class="stacked-buttons btn-group-toggle" data-toggle="buttons" id="effect">
+          <p>Choose a group of lights above to see available controls...</p>
+        </div>
+      </fieldset>
     </div>
   </div>
 </div>
