Status bar updates are now read to screen readers

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
   <div class="container status-content" id="status">
     Waiting for queue information...
   </div>
+  <span aria-live="assertive" class="sr-only" id="status-screenreader">Waiting for queue information...</span>
 </div>
 
 <!-- Header -->
