--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <title>Crowd Control - Ents Crew</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
+
+  <!-- Favicons -->
+  <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="/site.webmanifest" rel="manifest">
+  <link color="#000000" href="/safari-pinned-tab.svg" rel="mask-icon">
+  <meta content="Crowd Control" name="apple-mobile-web-app-title">
+  <meta content="Crowd Control" name="application-name">
+  <meta content="#2b5797" name="msapplication-TileColor">
+  <meta content="#000000" name="theme-color">
+
   <link crossorigin="anonymous"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha512-MoRNloxbStBcD8z3M/2BmnT+rg4IsMxPkXaGh2zD6LGNNFE80W3onsAhRcMAMrSoyWL9xD7Ert0men7vR8LUZg=="
@@ -14,7 +26,6 @@
         integrity="sha512-uZTwaYYhJLFXaXYm1jdNiH6JZ1wLCTVnarJza7iZ1OKQmvi6prtk85NMvicoSobylP5K4FCdGEc4vk1AYT8b9Q=="
         rel="stylesheet"/>
   <link href="resources/style.css" rel="stylesheet">
-
 </head>
 <body>
 <!-- Off air modal -->
