Text part of #9

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <title>Crowd Control - Ents Crew</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
 
+  <!-- Social sharing -->
+  <meta content="summary_large_image" name="twitter:card">
+  <meta content="@ustaents" name="twitter:site">
+  <meta content="Crowd Control by Ents Crew" name="twitter:title">
+  <meta content="Control the lights in Club 601 and watch your designs in real-time." name="twitter:description">
+  <!--  <meta name="twitter:image" content="{{ base_url }}/assets/{{ meta.image }}">-->
+
+  <!--  <meta property="og:url" content="" />-->
+  <meta content="Crowd Control by Ents Crew" property="og:title"/>
+  <meta content="Control the lights in Club 601 and watch your designs in real-time." property="og:description"/>
+  <!--  <meta property="og:image" content="{{ base_url }}/assets/{{ meta.image }}" />-->
+
   <!-- Favicons -->
   <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
   <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
