Fix incorrect Facebook link, improving copy

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
       </div>
       <div class="modal-body">
-        <p>Check our <a href="https://www.facebook.com/entscrew">Facebook page</a> to find out when we're live. If you
+        <p>Check our <a href="https://www.facebook.com/standrewsents">Facebook page</a> to find out when we're live. If
+          you
           think we should be live now, refresh the page.</p>
         <p>Ents Crew power events in the Union. Join us and we'll give you all the training you need for lighting,
           DJing, sound, or projections - and there's no membership fee!</p>
@@ -162,7 +163,8 @@
       </div>
     </div>
   </header>
-  <p>Choose a group of lights, then pick their colour, position, and effects.</p>
+  <p>Choose a group of lights, then pick their colour, position, and effects. Remember to hit play and watch your
+    designs appear in the live stream!</p>
   <hr>
 </div>
 
