--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           DJing, sound, or projections - and there's no membership fee!</p>
       </div>
       <div class="modal-footer">
-        <a class="btn btn-primary" href="https://entscrew.net">Join Ents Crew</a>
+        <a class="btn btn-primary" href="https://entscrew.net/join">Join Ents Crew</a>
       </div>
     </div>
   </div>
@@ -136,7 +136,7 @@
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary join-queue" data-dismiss="modal" type="button">Re-join the queue</button>
-        <a class="btn btn-primary" href="https://entscrew.net">Join Ents Crew</a>
+        <a class="btn btn-primary" href="https://entscrew.net/join">Join Ents Crew</a>
       </div>
     </div>
   </div>
@@ -164,7 +164,7 @@
     </div>
   </header>
   <p>Choose a group of lights, then pick their colour, position, and effects. Remember to hit play and watch your
-    designs appear in the live stream!</p>
+    designs appear on the live stream!</p>
   <hr>
 </div>
 
@@ -173,7 +173,7 @@
   <div class="embed-responsive embed-responsive-16by9">
     <!-- Embedded venue live stream -->
     <iframe allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen class="embed-responsive-item"
-            src="https://www.youtube-nocookie.com/embed/dAy8qi_tPsQ?modestbranding=1&rel=0&playsinline=1"></iframe>
+            src="https://www.youtube-nocookie.com/embed/zHOud4shSmo?modestbranding=1&rel=0&playsinline=1&autoplay=1"></iframe>
   </div>
   <small>Video hosted by YouTube and accessible under the <a href="https://policies.google.com/privacy" target="_blank">Google
     Privacy Policy</a>.</small>
